<resources>
    <string name="app_name">ProjetParcoursAPA</string>
    <string name="swipe_left_for_register">Glisser vers la droite pour s\'inscrire</string>
    <string name="login">Se connecter</string>
    <string name="password">Mot de passe</string>
    <string name="e_mail">Email</string>
    <string name="swipe_right_for_login">Glisser vers la gauche pour se connecter</string>
    <string name="register">S\'inscrire</string>
    <string name="re_type_password">Confirmer le mot de passe</string>
    <string name="nom">Nom</string>
    <string name="prenom">Prenom</string>
    <string name="icone_fleche">icone flèche</string>
    <string name="profil">Profil :</string>
    <string-array name="liste_profils">
        <item>Médecin</item>
        <item>Intervenant</item>
        <item>Patient</item>
    </string-array>
    <string name="creer_parcours">Créer un parcours APA</string>
    <string name="titre">Titre</string>
    <string name="parcours">Parcours APA</string>
    <string name="description">Description</string>
    <string name="categorie">Catégorie</string>
    <string name="patient">Patient</string>
    <string name="valider">Valider</string>
    <string name="activite">Activité(s)</string>
    <string name="duree">Durée en minutes</string>
    <string name="ajouter_activite">Ajouter une activité</string>
    <string name="annuler">Annuler</string>
    <string name="icone_fermer">icone fermer</string>
    <string name="activite_item">Activité :</string>
    <string name="oui">Oui</string>
    <string name="non">Non</string>
    <string name="ok">OK</string>
    <string name="reprogrammer">Reprogrammer</string>
    <string name="assigner_horaire">Assigner horaire</string>
    <string name="activite_assigner">Activité à assigner :</string>
    <string name="agenda_du_patient">Agenda du patient :</string>
    <string name="choisir_heure">Choisir l\'heure</string>
    <string name="titre_deux_points">Titre :</string>
    <string name="description_deux_points">Description :</string>
    <string name="duree_deux_points">"Durée : %1$s"</string>
    <string name="deroule_dans_structure">L\'activité se déroule dans une structure ?</string>
    <string name="structure">Structure :</string>
    <string name="discipline">Discipline</string>
    <string name="seance_du">"Séance du %1$s/%2$s"</string>
    <string name="heure_debut_fin">"De %1$sh%2$s à %3$sh%4$s"</string>
</resources>

