<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="5dp"
    android:paddingBottom="5dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/activite_assigner"
        android:textSize="15sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/titre_deux_points"
            android:textSize="15sp"
            android:layout_marginStart="20dp" />

        <EditText
            android:id="@+id/titre_activite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView2"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_toEndOf="@+id/textView2"
            android:layout_toRightOf="@+id/textView2"
            android:autofillHints="@string/titre"
            android:inputType="text"
            android:text=""
            android:textSize="15sp"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="10dp"
            android:layout_below="@id/textView2"
            android:text="@string/description_deux_points"
            android:textSize="15sp"
            android:layout_marginStart="20dp" />

        <EditText
            android:id="@+id/description_activite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView3"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_toEndOf="@+id/textView3"
            android:layout_toRightOf="@+id/textView3"
            android:autofillHints="@string/description"
            android:inputType="text"
            android:text=""
            android:textSize="15sp"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/duree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView3"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:text=""
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/duree"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/deroule_dans_structure"
            android:textSize="15sp" />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView4"
            android:orientation="horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="10dp">

            <RadioButton
                android:id="@+id/radio_button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/oui"/>

            <RadioButton
                android:id="@+id/radio_button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/non"
                android:checked="true"/>

        </RadioGroup>

        <LinearLayout
            android:id="@+id/assigner_structure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@+id/radio_group"
            android:layout_marginBottom="10dp"
            android:visibility="gone">

            <TextView
                android:id="@+id/structure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/structure"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/nom_structure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:hint="@string/nom"
                android:textSize="15sp"
                android:autofillHints="@string/nom"
                android:inputType="text"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/discipline_structure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:hint="@string/discipline"
                android:textSize="15sp"
                android:autofillHints="@string/discipline"
                android:inputType="text"
                tools:ignore="LabelFor" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_assigner_horaire"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_custom"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_below="@+id/assigner_structure"
            android:padding="5dp"
            android:text="@string/assigner_horaire"
            android:textColor="@color/white" />

    </RelativeLayout>

</LinearLayout>