<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="5dp"
    android:paddingBottom="5dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activite_item"
            android:textSize="15sp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="280dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="280dp" />

        <ImageView
            android:id="@+id/image_remove"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_toRightOf="@+id/textView"
            android:layout_toEndOf="@+id/textView"
            android:src="@drawable/ic_close"
            android:contentDescription="@string/icone_fermer" />
    </RelativeLayout>


    <EditText
        android:id="@+id/titre_activite"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/titre"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:padding="15dp"
        android:inputType="text"
        android:background="@drawable/et_custom"
        android:textSize="15sp"
        android:autofillHints="@string/titre" />

    <EditText
        android:id="@+id/description_activite"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/description"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:padding="15dp"
        android:inputType="text"
        android:background="@drawable/et_custom"
        android:textSize="15sp"
        android:autofillHints="@string/description" />

    <EditText
        android:id="@+id/duree"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/duree"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:padding="15dp"
        android:inputType="text"
        android:background="@drawable/et_custom"
        android:textSize="15sp"
        android:autofillHints="@string/duree" />

</LinearLayout>