<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="5dp"
    android:paddingBottom="5dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/structure"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/nom_structure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/nom"
        android:textSize="15sp"
        android:autofillHints="@string/nom"
        android:inputType="text"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/discipline_structure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/discipline"
        android:textSize="15sp"
        android:autofillHints="@string/discipline"
        android:inputType="text"
        tools:ignore="LabelFor" />

</LinearLayout>