<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".AssignerActivite" >

    <com.squareup.timessquare.CalendarPickerView
        android:id="@+id/calendar_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/btn_choisir_heure" />

    <Button
        android:id="@+id/btn_choisir_heure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_valider"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="100dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/btn_custom"
        android:text="@string/choisir_heure"
        android:textColor="@android:color/white"
        android:layout_marginEnd="100dp"
        android:layout_marginStart="20dp" />

    <Button
        android:id="@+id/btn_valider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_annuler"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/btn_custom"
        android:text="@string/valider"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/btn_annuler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/btn_custom"
        android:text="@string/annuler"
        android:textColor="@android:color/white" />

</RelativeLayout>



