<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/linear_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <TextView
        android:id="@+id/date_seance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:text=""
        android:textSize="15sp"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/titre_activite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="15dp"
        android:textSize="20sp"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="15dp"
        android:text="@string/description_deux_points"
        android:textSize="15sp"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/description_activite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="15dp"
        android:text=""
        android:textSize="15sp"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/heure_debut_fin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:textSize="15sp"
        android:textColor="@color/white" />

    <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent" >
        <Button
            android:id="@+id/btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_custom_white"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            android:textColor="@color/colorPrimary"
            android:text="@string/ok" />

        <Button
            android:id="@+id/btn_reprogrammer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_custom_white"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:layout_toRightOf="@id/btn_ok"
            android:padding="10dp"
            android:textColor="@color/colorPrimary"
            android:text="@string/reprogrammer"
            android:layout_toEndOf="@id/btn_ok" />
    </RelativeLayout>




</LinearLayout>